--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -5,17 +5,17 @@ import Title from "./Title.astro";
 <Title title="certifications" />
 <div class="flex flex-col space-y-4">
   <div>
-    <h6 class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
+    <p class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
       INATEC
-    </h6>
+    </p>
     <p class="text-neutral-600 dark:text-neutral-400">
       2016 / Computer technician
     </p>
   </div>
   <div>
-    <h6 class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
+    <p class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
       Android ATC
-    </h6>
+    </p>
     <p class="text-neutral-600 dark:text-neutral-400">
       2022 / Android Certified Application Engineer
     </p>
