refactor: change heading element to paragraph tag for ListSection to improve semantic structure

--- a/src/components/ListSection.astro
+++ b/src/components/ListSection.astro
@@ -8,9 +8,9 @@ const { title, data } = Astro.props;
 ---
 
 <div class="mt-4">
-  <h5 class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
+  <p class="capitalize pb-0.5 font-semibold text-lg dark:text-neutral-100">
     {title}
-  </h5>
+  </p>
   <ul
     class="capitalize pb-0.5 text-neutral-600 dark:text-neutral-400 list-disc ml-4">
     {
